<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <!-- This is the ONLY child of ScrollView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/errorMessage"
            android:visibility="gone"
            android:text="@string/something_went_wrong"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="-12dp"
            android:layout_marginTop="3dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#565c50" />

        <!--Wishlist Button-->
        <ImageButton
            android:id="@+id/watchlistButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="-4dp"
            android:layout_marginEnd="-12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/wishlist"
            android:src="@drawable/watchlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#565c50" />
    <!-- Stock Ticker -->
    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:textColor="#565c50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Stock Price (left-aligned, below ticker) -->

    <!-- Chart Placeholder -->

    <TextView
        android:id="@+id/currentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_price"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/symbol"
        app:layout_constraintEnd_toEndOf="parent" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/currentPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



                <!-- Left Column -->
    <LinearLayout
        android:id="@+id/leftColumn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightColumn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipoHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/ipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipo"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_outstandingHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/shareOutstanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_outstanding"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_capHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/marketCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_cap"
            android:textSize="14sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <!-- Right Column -->
    <LinearLayout
        android:id="@+id/rightColumn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/leftColumn"
        app:layout_constraintStart_toEndOf="@id/leftColumn"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchangeHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencyHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/industryHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/industry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/websiteHolder"
            android:textSize="16sp"
            android:fontFamily="@font/shentox"
            android:textColor="#565c50" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textSize="14sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

        <Button
            android:id="@+id/analyze_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#565c50"
            android:paddingVertical="12dp"
            android:text="@string/analyze"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/leftColumn"
            />

        <TextView
            android:id="@+id/analystRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyst_rating"
            android:textColor="#565c50"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/analyze_button"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/analystRatingContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/analystRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!-- Circular Buy Percentage -->
        <TextView
            android:id="@+id/maxOf"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_dark_green"
            android:text="@string/max_rating"
            android:gravity="center"
            android:textColor="#565c50"
            android:textSize="28sp"
            android:fontFamily="@font/shentox"
            android:layout_marginEnd="16dp" />

        <!-- Progress Bars -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Buy -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:id="@+id/progressBuy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="12dp"
                    android:progress="61"
                    android:max="100"
                    android:progressTint="#00d100"
                    android:backgroundTint="#404040" />

                <TextView
                    android:id="@+id/tvBuyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_rating"
                    android:textColor="#00d100"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/shentox"/>
            </LinearLayout>

            <!-- Hold -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:id="@+id/progressHold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="12dp"
                    android:progress="29"
                    android:max="100"
                    android:progressTint="#565c50"
                    android:backgroundTint="#404040" />

                <TextView
                    android:id="@+id/tvHoldLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hold_rating"
                    android:textColor="#565c50"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/shentox"/>
            </LinearLayout>

            <!-- Sell -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:id="@+id/progressSell"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="12dp"
                    android:progress="10"
                    android:max="100"
                    android:progressTint="#FF0000"
                    android:backgroundTint="#404040" />

                <TextView
                    android:id="@+id/tvSellLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_rating"
                    android:textColor="#FF0000"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/shentox"/>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>