<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="44dp">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="36sp"
            android:fontFamily="@font/shentox"
            android:textColor="#392511"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/app_logo"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/username_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:background="@drawable/rounded_text_box"
            android:drawableStart="@drawable/user_email"
            android:drawablePadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintBottom_toTopOf="@id/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/rounded_text_box"
            android:drawableStart="@drawable/password_lock"
            android:drawablePadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/username_email" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="#4D4D4D"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            app:layout_constraintTop_toBottomOf="@id/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_sign_up"
            android:textColor="#666666"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
