<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b94a3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="340dp"
            android:layout_height="0dp"
            android:text="@string/welcome_to"
            android:textSize="24sp"
            android:fontFamily="@font/lobster_regular"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:textStyle="italic"
            android:letterSpacing="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:text="@string/app_title_stock"
            android:layout_marginTop="-20dp"
            android:textColor="#392511"
            android:textSize="72sp"
            android:gravity="center"
            android:fontFamily= "@font/shentox"
            android:letterSpacing="0.05"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/app_title1"
            android:layout_width="288dp"
            android:layout_height="0dp"
            android:layout_marginTop="-32dp"
            android:text="@string/app_title_insights"
            android:textColor="#392511"
            android:textSize="72sp"
            android:gravity="center"
            android:fontFamily="@font/shentox"
            android:letterSpacing="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title" />

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="340dp"
            android:layout_height="0dp"
            android:text="@string/your_guide_to_trading"
            android:textSize="24sp"
            android:layout_marginTop="-4dp"
            android:gravity="center"
            android:fontFamily="@font/lobster_regular"
            android:textStyle="italic"
            android:letterSpacing="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title1" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="350dp"
            android:layout_height="475dp"
            android:src="@drawable/app_logo"
            app:layout_constraintTop_toBottomOf="@id/guide_text"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/app_logo"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <!-- SignUp Button -->
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingTop="16dp"
            android:paddingEnd="40dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="16dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>